gcc/testsuite/g++.old-deja/g++.brendan/anon-union1.C
// { dg-do assemble  }
// GROUPS passed anonymous-unions
static union {
        char*   uC;
private:
        int     uI;// { dg-error "" } .*private member.*
};
